@@ -2,76 +2,70 @@ package com.arka.gestorsolicitudes.infrastructure.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.method.configuration.EnableReactiveMethodSecurity;
-import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
-import org.springframework.security.config.web.server.ServerHttpSecurity;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.server.SecurityWebFilterChain;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.CorsConfigurationSource;
-import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * Configuración de seguridad para el microservicio de gestión de solicitudes
+ * Configuración de seguridad para el microservicio de gestión de solicitudes.
  */
 @Configuration
-@EnableWebFluxSecurity
-@EnableReactiveMethodSecurity
+@EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
-    
+
+    private static final String ROLE_ADMIN = "ADMINISTRADOR";
+    private static final String ROLE_GESTOR = "GESTOR";
+    private static final String ROLE_OPERADOR = "OPERADOR";
+    private static final String ROLE_USUARIO = "USUARIO";
+
     @Bean
-    public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http) {
-        return http
+    public SecurityFilterChain securityFilterChain(org.springframework.security.config.annotation.web.builders.HttpSecurity http) throws Exception {
+        http
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeExchange(exchanges -> exchanges
-                        // Endpoints de autenticación - públicos
-                        .pathMatchers("/auth/register", "/auth/login", "/auth/refresh").permitAll()
-                        
-                        // Endpoints de salud - públicos
-                        .pathMatchers("/actuator/health", "/actuator/info").permitAll()
-                        
-                        // Endpoints de administración - solo ADMINISTRADOR
-                        .pathMatchers("/api/admin/**").hasRole("ADMINISTRADOR")
-                        
-                        // Endpoints de gestión - ADMINISTRADOR y GESTOR
-                        .pathMatchers("/api/gestion/**").hasAnyRole("ADMINISTRADOR", "GESTOR")
-                        
-                        // Endpoints de operaciones - ADMINISTRADOR, GESTOR y OPERADOR
-                        .pathMatchers("/api/operaciones/**").hasAnyRole("ADMINISTRADOR", "GESTOR", "OPERADOR")
-                        
-                        // Endpoints de cálculos - todos los roles autenticados
-                        .pathMatchers("/api/calculos/**").hasAnyRole("ADMINISTRADOR", "GESTOR", "OPERADOR", "USUARIO")
-                        
-                        // Todos los demás endpoints requieren autenticación
-                        .anyExchange().authenticated()
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(authorize -> authorize
+            .requestMatchers("/auth/register", "/auth/login", "/auth/refresh").permitAll()
+            .requestMatchers("/actuator/health", "/actuator/info").permitAll()
+            .requestMatchers("/api/admin/**").hasRole(ROLE_ADMIN)
+            .requestMatchers("/api/gestion/**").hasAnyRole(ROLE_ADMIN, ROLE_GESTOR)
+            .requestMatchers("/api/operaciones/**").hasAnyRole(ROLE_ADMIN, ROLE_GESTOR, ROLE_OPERADOR)
+            .requestMatchers("/api/calculos/**").hasAnyRole(ROLE_ADMIN, ROLE_GESTOR, ROLE_OPERADOR, ROLE_USUARIO)
+                        .anyRequest().authenticated()
                 )
-                // Deshabilitar autenticación automática ya que usamos headers del Gateway
                 .httpBasic(httpBasic -> httpBasic.disable())
                 .formLogin(formLogin -> formLogin.disable())
-                .build();
+                .oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()));
+
+        return http.build();
     }
-    
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-    
+
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(12); // Strength 12 para mayor seguridad
+        return new BCryptPasswordEncoder(12);
     }
 }
